--- a/package.json
+++ b/package.json
@@ -1,18 +1,44 @@
 {
   "name": "chess-game",
   "version": "1.0.0",
-  "description": "A two-player chess game built with JavaScript.",
+  "description": "A 2-mode chess game.",
   "main": "src/game.js",
+  "type": "module",
   "scripts": {
-    "start": "open index.html"
+    "start": "npx http-server -p 8080 -c-1",
+    "dev": "npx http-server -p 8080 -c-1 -o",
+    "serve": "python -m http.server 8080",
+    "build": "echo 'No build process required for this client-side application'"
   },
   "keywords": [
     "chess",
     "game",
-    "javascript"
+    "javascript",
+    "ai",
+    "machine-learning",
+    "tensorflow",
+    "minimax",
+    "computer-opponent",
+    "neural-network",
+    "chess-engine"
   ],
-  "author": "Your Name",
+  "author": "lilkhoa",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@tensorflow/tfjs": "^4.0.0"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lilkhoa/chess-game.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lilkhoa/chess-game/issues"
+  },
+  "homepage": "https://github.com/lilkhoa/chess-game#readme"
 }
